[gd_scene load_steps=3 format=3 uid="uid://rdsbsl6ag741"]

[ext_resource type="Texture2D" uid="uid://dk83f63no7jqk" path="res://assets/cartas/Coringa.png" id="1_65myn"]
[ext_resource type="Script" uid="uid://sr36fg2renpj" path="res://scripts/cartas/cartaTrem.gd" id="1_j274c"]

[node name="CartaTrem" type="TextureRect"]
custom_minimum_size = Vector2(146, 250)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.4931
offset_top = -125.0
offset_right = 79.4931
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 0
texture = ExtResource("1_65myn")
expand_mode = 3
stretch_mode = 5
script = ExtResource("1_j274c")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
